--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.2",
+    "lucide-react": "^0.513.0",
     "next": "^14.2.28",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.6",
