--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.74.4",
+    "@types/react-datepicker": "^6.2.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
@@ -20,6 +22,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "react": "^18.2.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.18",
