--- a/package.json
+++ b/package.json
@@ -6,37 +6,56 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@tanstack/react-query": "^5.74.4",
-    "@types/react-datepicker": "^6.2.0",
-    "@types/styled-components": "^5.1.34",
-    "axios": "^1.8.4",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.12.2",
-    "lucide-react": "^0.513.0",
-    "next": "^14.2.28",
-    "next-intl": "^3.26.3",
-    "next-themes": "^0.4.6",
-    "nuqs": "^2.4.3",
-    "react": "^18.2.0",
-    "react-datepicker": "^8.4.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
-    "styled-components": "^6.1.18",
-    "zustand": "^5.0.3"
+    "@heroicons/react": "2.2.0",
+    "@tanstack/react-query": "5.74.4",
+    "@types/react-datepicker": "6.2.0",
+    "@types/styled-components": "5.1.34",
+    "axios": "1.8.4",
+    "clsx": "2.1.1",
+    "critters": "^0.0.23",
+    "framer-motion": "12.12.2",
+    "lucide-react": "0.513.0",
+    "next": "14.2.0",
+    "next-intl": "3.26.3",
+    "next-themes": "0.4.6",
+    "nuqs": "2.4.3",
+    "react": "18.2.0",
+    "react-datepicker": "8.4.0",
+    "react-dom": "18.2.0",
+    "react-icons": "5.5.0",
+    "styled-components": "6.1.18",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "3.0.0",
+    "@next/bundle-analyzer": "^15.3.3",
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.67",
+    "@types/react-dom": "18.2.22",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.0.0",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "husky": "9.0.11",
+    "lint-staged": "^15.5.2",
+    "postcss": "8.5.5",
+    "prettier": "3.2.5",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.4.2",
+    "web-vitals": "^5.0.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
