--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-datepicker": "8.4.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.59.0",
     "react-icons": "5.5.0",
     "styled-components": "6.1.18",
     "swiper": "^11.2.10",
