--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "12.12.2",
     "lucide-react": "0.513.0",
     "next": "14.2.0",
+    "next-auth": "^4.24.11",
     "next-intl": "3.26.3",
     "next-themes": "0.4.6",
     "nuqs": "2.4.3",
