--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.59.0",
     "react-icons": "5.5.0",
+    "react-toastify": "^11.0.5",
     "styled-components": "6.1.18",
     "swiper": "^11.2.10",
     "zustand": "5.0.3"
