--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "clsx": "2.1.1",
     "critters": "^0.0.23",
     "framer-motion": "12.12.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "0.513.0",
     "next": "14.2.0",
     "next-auth": "^4.24.11",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "3.0.0",
     "@next/bundle-analyzer": "^15.3.3",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
