--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "5.74.4",
     "@types/react-datepicker": "6.2.0",
     "@types/styled-components": "5.1.34",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "1.8.4",
     "clsx": "2.1.1",
     "critters": "^0.0.23",
